# alphaswarm-api

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: python.yaml
alphaswarm/: config.py
alphaswarm/agent/: __init__.py  agent.py  agent_client.py
alphaswarm/agent/clients/: __init__.py  cron_job.py  telegram_bot.py  terminal.py
alphaswarm/core/: token.py
alphaswarm/core/llm/: __init__.py  llm_function.py  message.py
alphaswarm/core/tool/: __init__.py  tool.py
alphaswarm/services/: api_exception.py
alphaswarm/services/alchemy/: __init__.py  alchemy_client.py
alphaswarm/services/chains/: __init__.py
alphaswarm/services/chains/evm/: __init__.py  constants_erc20.py  contracts.py  evm.py
alphaswarm/services/chains/solana/: __init__.py  jupiter_client.py  solana_client.py
alphaswarm/services/cookiefun/: __init__.py  cookiefun_client.py
alphaswarm/services/exchanges/: __init__.py  base.py  factory.py
alphaswarm/services/exchanges/jupiter/: jupiter.py
alphaswarm/services/exchanges/uniswap/: __init__.py  constants_v2.py  constants_v3.py  uniswap_client_base.py  uniswap_client_v2.py  uniswap_client_v3.py
alphaswarm/services/portfolio/: portfolio.py
alphaswarm/tools/alchemy/: __init__.py  alchemy_price_history.py
alphaswarm/tools/cookie/: __init__.py  cookie_metrics.py
alphaswarm/tools/core/: __init__.py  get_token_address.py  get_usd_price.py
alphaswarm/tools/exchanges/: __init__.py  execute_token_swap.py  get_token_price.py
alphaswarm/tools/forecasting/: __init__.py  price_forecasting.py
alphaswarm/tools/forecasting/prompts/: price_forecasting_system_prompt.md  price_forecasting_user_prompt.md
alphaswarm/tools/portfolio/: __init__.py  get_portfolio_balance.py
alphaswarm/tools/strategy_analysis/: __init__.py  strategy.py
alphaswarm/tools/telegram/: __init__.py  send_telegram_notification.py
alphaswarm/utils/: __init__.py  file_utils.py
api/: milei.py
config/: default.yaml  momentum_strategy_config.md  reference_custom_code_agent_system_prompt.txt  trading_strategy_agent_hints.txt  trading_strategy_agent_system_prompt.txt
docs/: architecture.md  services.md  tools.md
examples/: README.md
examples/agents/: portfolio_price_momentum_cron.py  price_forecaster.py
examples/basic/: 01_quote.py  02_swap.py  03_strategy.py
examples/interaction/: cron.py  telegram_bot.py  terminal.py
tests/: __init__.py
tests/integration/: conftest.py
tests/unit/: conftest.py  test_config.py
tests/unit/core/tool/: test_tool.py
tests/unit/tools/: test_get_token_address.py
(+34 files in other folders)
